@@ -4,7 +4,6 @@ Open with QMPlay2 and Enqueue files - improve
 Handle auto channels/samplerate change
 Better handle video size change
 Video preview on progress bar
-Video rotation: 90°/270°
 Better radio stations
 YouTube playlists
 Accurate seeking
