@@ -1,9 +1,10 @@
-Changes in QMPlay2 build 16.03.04:
+Changes in QMPlay2 build 16.03.06:
 	- feature: suspend the computer after playback is finished,
 	- fix VA-API driver Intel >= 1.6.2 video filtering,
 	- fix slow seeking on some slow network streams,
 	- zero-copy demuxing and decoding (if possible),
 	- updated Russian translation (victorr2007),
+	- 90°/270° video rotation (OpenGL only),
 	- visualization and VDPAU/DDraw bugfix,
 	- feature: A-B Repeat,
 	- OpenGL 2 bugfix,
